temp fix for the time entry form rendering issue on IE
git-svn-id: https://svn.kuali.org/repos/kpme/branches/version-1.1-br@2156 6c5f4195-72ea-6250-e7e4-e498f552a5df

--- a/src/main/webapp/css/tk.css
+++ b/src/main/webapp/css/tk.css
@@ -47,10 +47,6 @@
     /*text-decoration: underline;*/
 }
 
-#dialog-form {
-    font-size: .8em !important;
-}
-
 .ui-dialog-buttonpane {
     font-size: .9em !important;
     /*margin-left: auto !important;*/
@@ -217,9 +213,6 @@ select {
 
 #timesheet-panel {
     border: 1px solid #ccc;
-    float: left;
-    width: 100%;
-    /*margin: 20px 10px 0 1%;*/
     background-color: #FBF9EE;
 }
 
@@ -335,7 +328,7 @@ select {
 }
 
 #dialog-form form {
-    font-size: .9em !important;
+    font-size: .8em !important;
 }
 
 .validation {
